--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
         <select name="personagem" id="personagem">
           <option value="none" selected disabled hidden>Personagem</option>
-          <option value="personagem_1">Kitana</option>
-          <option value="personagem_1">Scorpion</option>
-          <option value="personagem_1">Baraka</option>tion>
+          <option value="kitana">Kitana</option>
+          <option value="scorpion">Scorpion</option>
+          <option value="baraka">Baraka</option>tion>
         </select>
       </div>
-   
+    <hr>
     <div class="flex-item">
       <h2>Informaçoes do Personagem</h2>
       <h3>Golpes especiais</h3>
@@ -41,4 +41,5 @@
     
   </div>
 </body>
+<script src="/index.js"></script>
 </html>
