--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mortal Kombat</title>
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
   
@@ -41,5 +41,5 @@
     
   </div>
 </body>
-<script src="index.js"></script>
+<script src="./index.js"></script>
 </html>
