--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   
-  <div class="flex-container">
+  <div class="container">
     <div class="header">
-      <h1>Mortal Kombat</h1>
+      <img class="avatar" src="./images/mk.png" alt="mk">
     </div>
-      <div class="form-control">
+      <div>
         <select name="version_mk" id="version_mk">
           <option value="none" selected disabled hidden>Versão MK</option>
         </select>
@@ -22,10 +22,11 @@
         </select>
       </div>
     <hr>
-    <div class="flex-item">
+    <div>
       <h2>Informaçoes do Personagem</h2>
-      <h3>Golpes especiais</h3>
+      
       <ul style="line-height:180%">
+        <h3>Golpes especiais</h3>
         <li>Fatality 1</li>
         <li>Fatality 2</li>
         <li>Fatality 3</li>
